reply and nodejs board list, detail add

--- a/react_query_final/public/index.html
+++ b/react_query_final/public/index.html
@@ -29,7 +29,7 @@
 
     <!-- Responsive CSS -->
     <link href="%PUBLIC_URL%/css/responsive/responsive.css" rel="stylesheet">
-
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=72fa81817487692b6dc093004af97650&libraries=services,clusterer"></script>
 
     <title>React App</title>
   </head>
