--- a/react_query_final/public/index.html
+++ b/react_query_final/public/index.html
@@ -26,6 +26,7 @@
     -->
     <!-- Core Stylesheet -->
     <link href="%PUBLIC_URL%/style.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/chat.css" rel="stylesheet">
 
     <!-- Responsive CSS -->
     <link href="%PUBLIC_URL%/css/responsive/responsive.css" rel="stylesheet">
